k8s/base/posterr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posterr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: posterr.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: posterr
            port:
              number: 3000
